force-app/main/default/objects/Opportunity/fields/Cylinder_Volume__c.field-meta.xml
<CustomField>
    <fullName>Cylinder_Volume__c</fullName>
    <description>Count Cylinder volume using V = πr2h</description>
    <formula>ROUND(3.14159 * (radius__c ^(2))  *  height__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cylinder Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>