force-app/main/default/objects/Opportunity/fields/Opportunity_Progress__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Progress__c</fullName>
    <formula>IF (  Percent_Completed__c &lt;= (25 / 100), &quot;Early&quot;, 
     (
       IF ( Percent_Completed__c &lt;= (75 / 100), &quot;Middle&quot;, &quot;Late&quot;)
      )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Progress</label>
    <type>Text</type>
</CustomField>